:lipstick: Fix devices going behind enclosures while being dragged

--- a/src/molkobain-datacenter-view/common/css/datacenter-view.scss
+++ b/src/molkobain-datacenter-view/common/css/datacenter-view.scss
@@ -361,12 +361,12 @@ $obj-class-tapelibrary-bg-color: #7da9bc;
 				box-sizing: content-box; /* Cause content has a fixed size */
 
 				> .mdv-device,
-				.mdv-enclosure{
+				> .mdv-enclosure{
 					flex-grow: 1;
 					position: absolute !important; /* important in order to override "relative" put by jQuery draggable/sortable plugins */
 					bottom: 0;
 					left: 0;
-					z-index: 1;
+					/*z-index: 1; Disabled for now as it is making devices going below enclosures during drag & drop */
 				}
 				> .mdv-device{
 					.mdv-element-note{
